--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,10 +77,10 @@ jobs:
         run: >
           docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{
           secrets.ECR_REPOSITORY_NAME }}:latest
-      - name: Stop and remove sensor container if running
-        run: >
-          docker ps -q --filter "name=sensor" | grep -q . && docker stop sensor
-          && docker rm -fv sensor
+      # - name: Stop and remove sensor container if running
+      #   run: >
+      #     docker ps -q --filter "name=sensor" | grep -q . && docker stop sensor
+      #     && docker rm -fv sensor
       - name: Run Docker Image to serve users
         run: >
           docker run -d -p 80:8080 --name=sensor -e 'AWS_ACCESS_KEY_ID=${{
